<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.uu.csproject.monadclient.LoginActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_notifications"
        android:title="@string/action_notifications"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mytrips"
        android:title="@string/action_mytrips"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_aboutus"
        android:title="@string/action_aboutus"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_signout"
        android:title="@string/action_signout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
