<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ConfirmCodePopup"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:padding="@dimen/layout_padding"
    android:theme="@style/ToolbarTheme"
    android:background="@color/primaryColor"
    android:id="@+id/popup_forgotpassword"
    >

    <TextView
        android:id="@+id/label_codesent"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_confirmcode_codesent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <TextView
        android:id="@+id/label_code"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_codesent"
        android:text="@string/label_confirmcode_code"
        />
    <EditText
        android:id="@+id/field_code"
        style="@style/Base.TextAppearance.AppCompat.Large.Inverse"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_code"
        android:inputType="number"
        android:hint="@string/label_confirmcode_codehint"
        />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_confirmcode_submit"
        android:textAllCaps="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>