<?xml version="1.0" encoding="utf-8"?>

<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/radiogroup_fragmentsettingstheme_theme"
    android:padding="@dimen/big_padding"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".activities.SettingsActivity"
    android:layout_gravity="center"
    >
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:id="@+id/radiobutton_fragmentsettingstheme_default"
        android:padding="@dimen/big_padding"
        android:text="@string/label_fragmentsettingstheme_default"
        android:textSize="@dimen/medium_text"
        android:layout_weight="1"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:id="@+id/radiobutton_fragmentsettingstheme_light"
        android:padding="@dimen/big_padding"
        android:text="@string/label_fragmentsettingstheme_light"
        android:textSize="@dimen/medium_text"
        android:layout_weight="1"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:id="@+id/radiobutton_fragmentsettingstheme_dark"
        android:padding="@dimen/big_padding"
        android:text="@string/label_fragmentsettingstheme_dark"
        android:textSize="@dimen/medium_text"
        android:layout_weight="1"/>
</RadioGroup>
